--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8848
+log4j.appender.CONSOLE = org.apache.log4j.ConsoleAppender
+log4j.appender.Threshold = DEBUG
+log4j.appender.CONSOLE.Target = System.out
+log4j.appender.CONSOLE.layout = org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern = [framework] % d - % c -%- 4r [ % t] %- 5p % c % x - % m % n
